--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,14 @@ body {
 /* font size */
 @layer base {
     h1 {
-        @apply text-[53px];
+        @apply lg:text-[53px] md:text-[40px] text-[35px] ;
+        @apply font-bold;
     }
 
     h2 {
         @apply text-[42px];
         @apply text-navyBlue;
+        @apply font-bold;
     }
 
     h3 {
@@ -31,7 +33,7 @@ body {
         @apply text-[20px];
     }
 
-    h5 {
+    h5 li p {
         @apply text-[16px];
     }
 
@@ -39,9 +41,6 @@ body {
         @apply text-[14px];
     }
 
-    li {
-        @apply text-[16px];
-    }
 }
 
 @layer components {
@@ -55,5 +54,9 @@ body {
 
     .bg-sky-blue-gradient {
         background-image: linear-gradient(122deg, #F3F9FF 0%, #F1F0FF 100%);
+    }
+
+    .banner-img-bg {
+        background: rgba(236, 210, 250, 0.35);
     }
 }
