--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-/* Josefin Sans Font */
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+/* Josefin Sans and lato Font */
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 /* Essential components from the Tailwind CSS  */
 @tailwind base;
@@ -14,7 +14,7 @@ body {
 /* font size */
 @layer base {
     h1 {
-        @apply lg:text-[53px] md:text-[40px] text-[35px] ;
+        @apply lg:text-[53px] md:text-[40px] text-[35px];
         @apply font-bold;
     }
 
@@ -52,6 +52,10 @@ body {
 }
 
 @layer utilities {
+
+    .lato {
+        font-family: "Lato", sans-serif;
+    }
 
     .bg-sky-blue-gradient {
         background-image: linear-gradient(122deg, #F3F9FF 0%, #F1F0FF 100%);
