--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@ body {
         background-image: linear-gradient(122deg, #F3F9FF 0%, #F1F0FF 100%);
     }
 
-    .banner-img-bg {
+    .card-img-bg {
         background: rgba(236, 210, 250, 0.35);
     }
 }
